<resources>
    <string name="app_name">HNL info</string>
    <string name="iv_cd_osijek">Grb NK Osijek</string>
    <string name="iv_cd_rijeka">Grb HNK Rijeka</string>
    <string name="iv_cd_dinamo">Grb GNK Dinamo</string>
    <string name="iv_cd_lokomotiva">Grb NK Lokomotiva</string>
    <string name="iv_cd_gorica">Grb HNK Gorica</string>
    <string name="iv_cd_inter">Grb NK Inter</string>
    <string name="iv_cd_slaven">Grb NK Slaven Belupo</string>
    <string name="iv_cd_istra">Grb Istra 1961</string>
    <string name="iv_cd_hajduk">Grb HNK Hajduk</string>
    <string name="iv_cd_rudes">Grb NK Rudeš</string>
    <string name="menu_clubs">Klubovi</string>
    <string name="menu_history">Povijest</string>
    <string name="menu_statistics">Statistika</string>
    <string name="tv_dinamo_name">GNK Dinamo</string>
    <string name="tv_gorica_name">HNK Gorica</string>
    <string name="tv_hajduk_name">HNK Hajduk</string>
    <string name="tv_inter_name">NK Inter-Zaprešić</string>
    <string name="tv_istra_name">NK Istra 1961</string>
    <string name="tv_lokomotiva_name">NK Lokomotiva</string>
    <string name="tv_osijek_name">NK Osijek</string>
    <string name="tv_rijeka_name">HNK Rijeka</string>
    <string name="tv_rudes_name">NK Rudeš</string>
    <string name="tv_slaven_name">NK Slaven Belupo</string>
    <string name="tv_location_osijek">Osijek</string>
    <string name="tv_location_zagreb">Zagreb</string>
    <string name="tv_location_split">Split</string>
    <string name="tv_location_rijeka">Rijeka</string>
    <string name="tv_location_koprivnica">Koprivnica</string>
    <string name="tv_location_pula">Pula</string>
    <string name="tv_location_zapresic">Zaprešić</string>
    <string name="tv_location_velika_gorica">Velika Gorica</string>
    <string name="tv_club_established">Osnovan:</string>
    <string name="tv_club_stadium">Stadion:</string>
    <string name="tv_club_stadium_capacity">Kapacitet stadiona:</string>
    <string name="tv_club_chairman">Predsjednik:</string>
    <string name="tv_club_manager">Trener:</string>
    <string name="tv_club_website">Web-mjesto:</string>
    <string name="osijek_established_data">27. veljače 1947.</string>
    <string name="osijek_stadium_data">Gradski vrt</string>
    <string name="osijek_stadium_capacity_data">18.856</string>
    <string name="osijek_chairman_data">Ivan Meštrović</string>
    <string name="osijek_manager_data">Zoran Zekić</string>
    <string name="osijek_website_data">www.nk-osijek.hr</string>
    <string name="season_data">Season</string>
    <string name="champion_data">Champion</string>
    <string name="history_overview">Prva hrvatska nogometna liga osnovana je 1992. godine. Premijerna sezona (1992.) je, zbog srpske oružane agresije na Hrvatsku, odigrana tek u proljetnom dijelu, a natjecalo se 12 klubova. Idućih je godina često mijenjan sustav natjecanja i broj klubova u natjecanju, koji je varirao od 18 u sezoni 1993./94. pa do 10 klubova, koliko ih se danas natječe. Od 2003. godine liga u svom službenom nazivu redovito sadrži i ime svog glavnog sponzora:\n\n2003. – 2007.:\t\tOžujsko Prva HNL\n2007. – 2011.:\t\tT-Com Prva HNL\n2011. – 2017.:\t\tMAXtv Prva liga\n2017. – danas:\tHT Prva liga</string>
    <string name="position_data">Po.</string>
    <string name="club_data">Club</string>
    <string name="number_data">Nr</string>
    <string name="goals_data">GF:GA</string>
    <string name="player_data">Player</string>
</resources>